tests/error/misc_errors/check_error.py
from guppylang.decorator import guppy


@guppy
def foo(x: float) -> int:
    return x


# Call check instead of compile
guppy.check(foo)
